...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/text_about_which"/>

    <Button
        android:id="@+id/find_my_npu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableStart="@drawable/ic_my_location_24dp"
        android:drawablePadding="8dp"
        android:textColor="@color/md_white_1000"
...
