...
                android:textSize="18sp"
                tools:text="Select an NPU" />
        </FrameLayout>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/search_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_search_white_24dp"
        android:contentDescription="@string/content_description_find_npu_by_address"
...
