...
                    tools:listitem="@layout/element_upcoming_event"
                    tools:layout_height="150dp"/>

                <!--About NPUs-->
                <TextView
                    style="@style/ActionableTextViewRowStyle"
                    android:id="@+id/about_npus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_clickable_view_dark_blue"
                    android:text="@string/text_about_npu"/>

                <!--All NPU Meeting Times-->
...
